--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^5.3.2",
+    "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "mdb-react-ui-kit": "^6.2.0",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
