--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,22 @@
     "bootstrap": "^5.3.2",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.4.0",
     "font-awesome": "^4.7.0",
     "mdb-react-ui-kit": "^6.2.0",
+    "otp-input-react": "^0.3.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-otp-input": "^3.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
