--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^10.4.0",
     "react-router-dom": "^6.15.0",
     "redux": "^4.2.1"
   }
