--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-<<<<<<< Updated upstream
     "axios": "^1.5.0",
-=======
     "bootstrap": "^5.3.2",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
@@ -24,9 +22,11 @@
     "mongodb": "^6.2.0",
     "otp-input-react": "^0.3.0",
     "popper.js": "^1.16.1",
->>>>>>> Stashed changes
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
