--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "email-js": "^2.0.2",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.5.2",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
