--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.2",
     "compression": "^1.7.4",
     "email-js": "^2.0.2",
+    "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.5.2",
     "otp-input-react": "^0.3.0",
