--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
     "name": "server",
     "version": "1.0.0",
     "description": "",
-    "main": "server.js",
-    
+    "main": "app.js",
     "scripts": {
-        "start": "nodemon server.js",
+        "start": "node app.js",
+        "dev": "nodemon app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -13,6 +13,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
